--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
 * {
-    background: pink;    
+   margin: 0;
+   padding: 0;    
+}
+h1 {
+    text-align: center;
+    margin: 50px 0 !important;
+    font-family: sans-serif;
+    
 }
