--- a/style.css
+++ b/style.css
@@ -36,3 +36,24 @@ button {
 .accordion-item {
     box-shadow: 0 2px 20px 0 rgba(110,130,208, .18);
 }
+.accordion-button {
+    width: 100%;
+    height: 60px;
+    color: #000;
+    font-weight: bold;
+    text-align: left;
+    text-decoration: none;
+}
+.accordion-body {
+    background: #e8eeff; 
+}
+button:after {
+    content: '\2212';
+    width: 35px;
+    font-size: 25px;
+    text-align: center;
+    border-radius: 5px;
+    right: 15px;
+    top: 11px;
+    position: absolute; 
+}
